--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ futures-util = "0.3.31"
 anyhow = "1.0.100"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_yaml = "0.9.34"
 
 [profile.release]
 opt-level = 3
